# Udev-Sample

./: README.md
Drivers/: CMakeLists.txt  DriverManager.c  udev_event.py
Drivers/Uart/: Uart.c  Uart.h
Drivers/common/: queue.c  queue.h
